Changelog
=========

0.15.0 (unreleased)
-------------------

- **Important** This release changes producers and messages to join
  the current transaction using 'join' instead of 'register'. This is
  should be fully backwards compatible, but requires more testing for
  possible side-effects.

- Fix to join transaction using join instead of register to support savepoints
  [Asko Soukka]
- Add minimal savepoint support (NoRollbackSavepoint)
  [Asko Soukka]

0.14.3 (2014-10-23)
-------------------

- Log connection and channel creation etc.
  [sunew]

0.14.2 (2014-10-23)
-------------------

- The ZAMQP_LOGLEVEL environment variable was not yet accessible at import
  time. Moved Logger to utils module to delay the import.
  [sunew]

0.14.1 (2014-10-10)
-------------------

- Fix issue where logging reject did not get enough arguments
  [datakurre]

0.14.0 (2014-09-18)
-------------------

- Fix issue where language is not correctly set for AMQP requests
  [datakurre]
- Remove hard dependency to z3c.unconfigure 1.0.1
  [saily]

0.13.2 (2013-11-08)
-------------------

- Remove duplicate default producer from test fixture.
  [datakurre]

0.13.1 (2013-11-08)
-------------------

- Fix packaging.

0.13.0 (2013-11-08)
-------------------

- Add vhm_method_prefix-option to replace old vhm-options
  [datakurre]

0.12.0 (2013-08-08)
-------------------

- Fix to store durable publishable messages during reconnection period
  in memory on the base of message's delivery_mode-proprety, not
  producer's durable-property
  [datakurre]

- Combine loggers and reduce logging
  [saily, datakurre]

0.11.0 (2013-06-05)
-------------------

- Set ``use_vhm=False`` for ZAMQP Test Layer
  [saily]

- Add option ``use_vhm`` to make VHM-methods optional (to allow use of
  hostname=localhost:8080/Plone in development)
  [datakurre]

- Added a configureable scheme, hostname and port keyword to be passed into
  fake request object in consumers. We well automatically rewrite those URLs