@@ -8,7 +8,7 @@ package-extras = [test]
 versions = versions
 
 [versions]
-setuptools =
+setuptools = 18.2
 zc.buildout =
 unittest2 =
 
