@@ -1,30 +1,0 @@
-[buildout]
-extends =
-    https://raw.github.com/collective/buildout.plonetest/master/travis-4.x.cfg
-    rabbitmq.cfg
-parts =
-    erlang
-    rabbitmq
-    download
-    install
-    test
-
-package-name = collective.zamqp
-package-extras = [test]
-
-allow-hosts +=
-    code.google.com
-    robotframework.googlecode.com
-
-[versions]
-setuptools =
-zc.buildout =
-
-[test]
-# initialization =
-#     import rabbitfixture.server
-#     rabbitfixture.server.RABBITBIN = "/usr/sbin"
-initialization =
-    import rabbitfixture.server
-    rabbitfixture.server.RABBITBIN = "${buildout:parts-directory}/rabbitmq/scripts"
-    os.environ["PATH"] = "%s:%s" % ("${erlang:location}/bin", os.environ["PATH"])
